2016-04-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* NEWS: Set release date to current date.

2016-03-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	S8150954, PR2866, RH1176206: AWT Robot not
	compatible with GNOME Shell
	* INSTALL: Update X11 dependency documentation.
	* configure.ac: Add check
	for libXcomposite as required by fix
	for PR2866. Correct variables used by
	xproto check.

2016-04-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am,
	(CORBA_CHANGESET): Update to icedtea-3.0.0 tag.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(NASHORN_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	(NASHORN_SHA256SUM): Likewise.
	* NEWS: Updated.
	* configure.ac: Bump to 3.0.0.
	* hotspot.map.in: Update to icedtea-3.0.0 tag.

2016-04-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2921: Uninstallation of docs deletes too much
	* Makefile.am:
	(uninstall-local): Don't delete docs from the
	build directory. Instead, do the inverse of the
	installation step, removing each item copied over
	by the install.
	* NEWS: Updated.

2016-04-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2920: PaX marking fails on filesystems which
	don't support extended attributes
	* Makefile.am:
	(icedtea): Pass true to pax-mark-vm to fail
	if PaX marking fails.
	(icedtea-debug): Likewise.
	(icedtea-boot): Likewise.
	(install-exec-local): Pass false to pax-mark-vm
	so that only a warning is produced if PaX marking
	fails on the installed version.
	* NEWS: Updated.
	* pax-mark-vm.in:
	Add a second option, FAIL_ON_ERROR, which will
	cause the script to exit if it can't PaX mark
	when set to true, but just issue a warning when
	set to false.
